<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="satinAlFragment"
            type="com.yargisoft.yemekuygulamasi.ui.fragment.SatinAlFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarSatinAl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:contextClickable="true"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">


                <TextView
                    android:id="@+id/tvToolbarSatinAl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/app_isim"
                    android:textColor="@color/textColor"
                    android:textSize="30sp" />
                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/ic_menu"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="2dp" />

            </androidx.appcompat.widget.Toolbar>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/fabSepetSatinAl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="İletişim Bilgileri"
                        android:textColor="@color/textColor"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/adreslerim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="Adreslerim"
                        android:textColor="@color/textColor"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="186dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:textColorHint="@color/textColor"
                        app:boxBackgroundColor="@color/white"
                        app:hintTextColor="@color/textColor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/adSoyad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Ad Soyad"
                            android:singleLine="true"
                            android:textColorHint="@color/textColor"
                            android:textSize="13sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="186dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:textColorHint="@color/textColor"
                        app:boxBackgroundColor="@color/white"
                        app:hintTextColor="@color/textColor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/telefon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:hint="Telefon"
                            android:inputType="number"
                            android:singleLine="true"
                            android:textColorHint="@color/textColor"
                            android:textSize="13sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="380dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/adress"
                    android:textColorHint="@color/textColor"
                    app:boxBackgroundColor="@color/white"
                    app:hintTextColor="@color/textColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/adres"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine"
                        android:textSize="13sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"

                        android:layout_weight="1"
                        android:text="Kart Bilgileri"
                        android:textColor="@color/textColor"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/kartlarim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="Kartlarim"
                        android:textColor="@color/textColor"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/card_number"
                    android:textColorHint="@color/textColor"
                    app:boxBackgroundColor="@color/white"
                    app:hintTextColor="@color/textColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/card_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number|textCapCharacters"
                        android:singleLine="true"
                        android:textSize="13sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/card_owner"
                    android:textColorHint="@color/textColor"
                    app:boxBackgroundColor="@color/white"
                    app:hintTextColor="@color/textColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/card_owner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords|textCapCharacters"
                        android:singleLine="true"
                        android:textSize="13sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="186dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"

                        android:hint="@string/date"
                        android:textColorHint="@color/textColor"
                        app:boxBackgroundColor="@color/white"
                        app:hintTextColor="@color/textColor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/card_date"
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:singleLine="true"
                            android:textSize="13sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="186dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:hint="@string/cvv"
                        android:textColorHint="@color/textColor"
                        app:boxBackgroundColor="@color/white"
                        app:hintTextColor="@color/textColor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/card_cvv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number|textCapWords|textCapCharacters"
                            android:singleLine="true"
                            android:textSize="13sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/save_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="@color/textColor"
                        android:text="@string/save_card"
                        android:textColor="@color/textColor"
                        android:textColorHighlight="@color/textColor"
                        android:textColorLink="@color/textColor" />

                    <CheckBox
                        android:id="@+id/save_adress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/save_adress"
                        android:textColor="@color/textColor"
                        android:textColorHighlight="@color/textColor"
                        android:textColorLink="@color/textColor" />

                    <CheckBox
                        android:id="@+id/d3_secure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/d3_secure"
                        android:textColor="@color/textColor"
                        android:textColorHighlight="@color/textColor"
                        android:textColorLink="@color/textColor" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnOdeme"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_text"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="420dp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSepetSatinAl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_sepet"
            app:tint="@android:color/white">


        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAnaSayfaSatinAl"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_home_white"
            app:tint="@android:color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>